# pyde

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-ci.yaml
docs/source/: conf.py  index.rst
src/pyde/: __init__.py
tests/: test_smoke.py
