[project]
name = "pyde"
version = "0.1.0"
description = "An IDE written in Python"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [

]

[project.urls]
repository = "https://github.com/letsbuilda/pyde/"
documentation = "https://letsbuilda.dev/pyde/"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
tests = [
    "pytest",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "toml",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.sphinx]
copyright = "Let's Build A ..."
author = "Let's Build A ... Team"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120
